tour section done

--- a/index.html
+++ b/index.html
@@ -1,17 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AK-travel</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/style.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap");
+    </style>
+    <script
+      src="https://kit.fontawesome.com/1e4e020e43.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <!-- banner section -->
     <header>
-        
+      <section class="banner">
+        <div class="header">
+          <h1 class="banner-heading">Explore your travel</h1>
+          <p class="banner-para">
+            By traveling one can explore the world and enriches the knowledge
+            about the world. <br />
+            Traveling doesn't mean to go out of the country. In our own country
+            there are many places to go and travel.
+          </p>
+          <div class="input-field">
+            <input type="text" placeholder="Where go" name="" id="" />
+            <div>
+              <input type="text" placeholder="When" name="" id="" />
+              <!-- <i class="fa-light fa-angle-down"></i> -->
+            </div>
+            <div>
+              <input type="text" placeholder="Select Type" name="" id="" />
+            </div>
+            <div>
+              <i class="fa-solid fa-magnifying-glass"></i>
+              <!-- <input type="text" placeholder="Find Now" name="" id="" /> -->
+              <!-- <button>Find Now</button> -->
+            </div>
+          </div>
+        </div>
+      </section>
     </header>
-    <main></main>
+    <main>
+      <!-- Tour section -->
+      <section>
+        <div class="tours">
+          <div class="tour-heading">
+            <h1>Our Popular Tours</h1>
+            <p>
+              From our tour agency we provide the best refreshment for our
+              travelers. Also we provide best environment. So book your tour
+              with us.
+            </p>
+            <ul>
+              <li>
+                One of the most popular tour of our's is Kashmir tour. We have a
+                blast quality of refreshments.
+              </li>
+              <li>
+                A lot of people from our agency go to Maldives. In there we try
+                to give our best quality to the customers.
+              </li>
+              <li>
+                Another popular spot is Indonesia. Bali is main demanding spot
+                for the travelers.
+              </li>
+            </ul>
+            <p>
+              A large number of people reviewed our website as in for the best
+              quality for the customers. So we ensure you that you will a safe
+              journey through our travel agency.
+            </p>
+            <button class="tour-btn">Read More</button>
+          </div>
+          <div class="tour-img">
+            <img src="Images/Rectangle 4.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <!-- Tour section done -->
+
+      <!-- Destination section -->
+      <section>
+        <div class="destination">
+          <div class="destination-details">
+            <h1>Choose Your Destination</h1>
+            <p>
+              You can easily choose where you want to go. Through our travel
+              agency <br> you can pick your time and destination on your own desire.
+            </p>
+          </div>
+          <div>
+            <div class="div-1">
+              <img src="Images/Rectangle 5.png" alt="">
+              <img src="Images/Rectangle 8.png" alt="">
+            </div>
+            <div class="div-2">
+              <img src="Images/Rectangle 6.png" alt="">
+              <img src="Images/Rectangle 7.png" alt="">
+              <img src="Images/Rectangle 9.png" alt="">
+            </div>
+            <div class="div--3">
+              <img src="Images/Rectangle 10.png" alt="">
+              <img src="Images/Rectangle 11.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
-</body>
+  </body>
 </html>
