destination section done

--- a/index.html
+++ b/index.html
@@ -89,26 +89,49 @@
             <h1>Choose Your Destination</h1>
             <p>
               You can easily choose where you want to go. Through our travel
-              agency <br> you can pick your time and destination on your own desire.
+              agency <br />
+              you can pick your time and destination on your own desire.
             </p>
           </div>
           <div>
             <div class="div-1">
-              <img src="Images/Rectangle 5.png" alt="">
-              <img src="Images/Rectangle 8.png" alt="">
+              <div>
+                <p class="div-1-para">Maldives</p>
+                <img src="Images/Rectangle 5.png" alt="" />
+              </div>
+              <div>
+                <p class="div-2-para">Indonesia</p>
+                <img src="Images/Rectangle 8.png" alt="" />
+              </div>
             </div>
             <div class="div-2">
-              <img src="Images/Rectangle 6.png" alt="">
-              <img src="Images/Rectangle 7.png" alt="">
-              <img src="Images/Rectangle 9.png" alt="">
+              <div>
+                <p class="div-3-para">Srilanka</p>
+                <img src="Images/Rectangle 6.png" alt="" />
+              </div>
+              <div>
+                <p class="div-4-para">North- America</p>
+                <img src="Images/Rectangle 7.png" alt="" />
+              </div>
+              <div>
+                <p class="div-5-para">Kashmir</p>
+                <img src="Images/Rectangle 9.png" alt="" />
+              </div>
             </div>
             <div class="div--3">
-              <img src="Images/Rectangle 10.png" alt="">
-              <img src="Images/Rectangle 11.png" alt="">
+              <div>
+                <p class="div-6-para">Bangladesh</p>
+                <img src="Images/Rectangle 10.png" alt="" />
+              </div>
+              <div>
+                <p class="div-7-para">Bandarban</p>
+                <img src="Images/Rectangle 11.png" alt="" />
+              </div>
             </div>
           </div>
         </div>
       </section>
+      <!-- destination section done -->
     </main>
     <footer></footer>
   </body>
