--- a/index.html
+++ b/index.html
@@ -132,6 +132,51 @@
         </div>
       </section>
       <!-- destination section done -->
+
+      <!-- choose section -->
+      <section>
+        <div class="choose">
+          <h1>Why Choose Us</h1>
+          <p>
+            You can choose our travel agency because we will provide the best
+            environment to you guys. <br />
+            At a cheeper rate you wii enjoy the tours.
+          </p>
+        </div>
+        <div class="cards">
+          <div class="card-1">
+            <img class="card-img-1" src="Images/hotel-icon-removebg-preview.png" alt="" />
+            <h2>Handpicked Hotels</h2>
+            <p>
+              Romantic road trips, frolicking with friends, exploring with the
+              kids - whatever your reason to escape the everyday, there is a
+              Hand Picked Hotel for you. From coastal retreats in the Channel
+              Islands to country house hotels in the British countryside,
+            </p>
+          </div>
+          <div class="card-2">
+            <img class="card-img-2" src="Images/map-removebg-preview.png" alt="" />
+            <h2>World Class Service</h2>
+            <p>
+              All hotels are judged on a rating scale, and though they use
+              varying systems that consist of different techniques,
+              qualifications, standards, <br> and expectations, they all try to
+              accurately judge the quality of a hotel.
+            </p>
+          </div>
+        </div>
+        <div class="card-3">
+          <img class="card-img-3" src="Images/hotel-key-removebg-preview.png" alt="" />
+          <h2>Best Price Guarantee</h2>
+          <p>
+            When you book directly with us, we promise you'll always get the
+            lowest price online. If you find a better price somewhere else,
+            we'll match it and give you five times the IHG One Rewards Points,
+            up to a 40,000-point maximum.
+          </p>
+        </div>
+      </section>
+      <!-- choose section done -->
     </main>
     <footer></footer>
   </body>
