choose and newsletter section done

--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
         </div>
         <div class="cards">
           <div class="card-1">
-            <img class="card-img-1" src="Images/hotel-icon-removebg-preview.png" alt="" />
+            <img
+              class="card-img-1"
+              src="Images/hotel-icon-removebg-preview.png"
+              alt=""
+            />
             <h2>Handpicked Hotels</h2>
             <p>
               Romantic road trips, frolicking with friends, exploring with the
@@ -155,18 +159,27 @@
             </p>
           </div>
           <div class="card-2">
-            <img class="card-img-2" src="Images/map-removebg-preview.png" alt="" />
+            <img
+              class="card-img-2"
+              src="Images/map-removebg-preview.png"
+              alt=""
+            />
             <h2>World Class Service</h2>
             <p>
               All hotels are judged on a rating scale, and though they use
               varying systems that consist of different techniques,
-              qualifications, standards, <br> and expectations, they all try to
-              accurately judge the quality of a hotel.
+              qualifications, standards, <br />
+              and expectations, they all try to accurately judge the quality of
+              a hotel.
             </p>
           </div>
         </div>
         <div class="card-3">
-          <img class="card-img-3" src="Images/hotel-key-removebg-preview.png" alt="" />
+          <img
+            class="card-img-3"
+            src="Images/hotel-key-removebg-preview.png"
+            alt=""
+          />
           <h2>Best Price Guarantee</h2>
           <p>
             When you book directly with us, we promise you'll always get the
@@ -177,6 +190,48 @@
         </div>
       </section>
       <!-- choose section done -->
+
+      <!-- newsletter section -->
+
+      <section>
+        <div class="newsletter">
+          <div class="newsletter-details">
+            <div>
+              <h2>Newsletter</h2>
+              <p>
+                Get your daily dose of your travel news and tips. <br />
+                Sign up today.
+              </p>
+            </div>
+            <div>
+              <div class="hr-line"><hr /></div>
+            </div>
+            <div class="newsletter-input">
+              <input
+                type="text"
+                name=""
+                id="input-1"
+                placeholder="Enter-Your-Name"
+              />
+              <input
+                type="text"
+                name=""
+                id="input-2"
+                placeholder="Enter-Your-Email"
+              />
+            </div>
+            <button class="newsletter-btn">Subscribe</button>
+          </div>
+          <div class="newsletter-sale">
+            <img src="styles/Rectangle 8 (1).png" alt="" />
+          </div>
+          <div class="sale">
+            <h3>Travel.com</h3>
+            <h2>Save up to 70%</h2>
+          </div>
+        </div>
+      </section>
+      <!-- newsletter section done -->
     </main>
     <footer></footer>
   </body>
