footer section done

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
               </p>
             </div>
             <div>
-              <div class="hr-line"><hr /></div>
+              <div class="hr-line-2"><hr /></div>
             </div>
             <div class="newsletter-input">
               <input
@@ -232,6 +232,35 @@
         </div>
       </section>
       <!-- newsletter section done -->
+
+      <!-- Footer section -->
+      <section>
+        <div class="footer">
+          <div class="footer-details">
+            <img class="footer-img" src="Images/Group 40071 (2).png" alt="" />
+            <h1>AK <span class="travel">Travel</span></h1>
+          </div>
+          <div >
+            <p class="footer-para">
+              We always ensure that our customers will get the best experience
+              from our tour travels. <br />
+              So you guys can travel with us. We main the hygiene and the
+              security.
+            </p>
+          </div>
+          <div class="icons">
+            <i class="fa-brands fa-twitter fa-2x"></i>
+            <i class="fa-brands fa-facebook fa-2x"></i>
+            <i class="fa-brands fa-square-instagram fa-2x"></i>
+            <i class="fa-brands fa-github fa-2x"></i>
+          </div>
+          <div class="hr-line">
+            <div><hr /></div>
+          </div>
+          <p>2017, All Rights Reserved</p>
+        </div>
+      </section>
+      <!-- Footer section done -->
     </main>
     <footer></footer>
   </body>
