navbar and review section done

--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
     ></script>
   </head>
   <body>
+    <!-- navbar section -->
+    <section>
+      <nav class="nav">
+        <div class="navbar">
+          <img class="footer-img" src="Images/Group 40071 (2).png" alt="" />
+          <h1>AK <span class="travel">Travel</span></h1>
+        </div>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">packages</a></li>
+          <li><a href="">Testimonial</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+    </section>
+    <!-- navbar section done -->
+
     <!-- banner section -->
     <header>
       <section class="banner">
@@ -26,18 +44,26 @@
             there are many places to go and travel.
           </p>
           <div class="input-field">
-            <input type="text" placeholder="Where go" name="" id="" />
-            <div>
-              <input type="text" placeholder="When" name="" id="" />
-              <!-- <i class="fa-light fa-angle-down"></i> -->
-            </div>
-            <div>
-              <input type="text" placeholder="Select Type" name="" id="" />
-            </div>
-            <div>
-              <i class="fa-solid fa-magnifying-glass"></i>
-              <!-- <input type="text" placeholder="Find Now" name="" id="" /> -->
-              <!-- <button>Find Now</button> -->
+            <div class="inputs">
+              <input
+                class="input-1"
+                type="text"
+                placeholder="Where go"
+                name=""
+                id=""
+              />
+              <div class="input-2">
+                <input type="text" placeholder="When" name="" id="" />
+                <!-- <i class="fa-light fa-angle-down"></i> -->
+              </div>
+              <div>
+                <input type="text" placeholder="Select Type" name="" id="" />
+              </div>
+              <div>
+                <!-- <i class="fa-solid fa-magnifying-glass"></i> -->
+
+                <button class="banner-btn">Find Now</button>
+              </div>
             </div>
           </div>
         </div>
@@ -233,6 +259,35 @@
       </section>
       <!-- newsletter section done -->
 
+      <!-- Review section -->
+
+      <section>
+        <div class="reviews">
+          <h1>Customers Review</h1>
+          <p>
+            A lot number of people have travel through our agency and <br />
+            they give some feedbacks. Anyone can give this reviews.
+          </p>
+        </div>
+        <div class="review">
+          <div class="review-1">
+            <img src="/Images/girl1.jpeg" alt="" />
+            <h3>Name: Miss Halen</h3>
+            <p>
+              Ak travel is ever been a best agency for a tour. <br />
+              Had a great experience with them.
+            </p>
+          </div>
+          <div class="review-2">
+            <img src="Images/girl2.jpeg" alt="" />
+            <h3>Name: Miss Afrin</h3>
+            <p>Experienced an average tour. Not so good their services.</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Review section done -->
+
       <!-- Footer section -->
       <section>
         <div class="footer">
@@ -240,7 +295,7 @@
             <img class="footer-img" src="Images/Group 40071 (2).png" alt="" />
             <h1>AK <span class="travel">Travel</span></h1>
           </div>
-          <div >
+          <div>
             <p class="footer-para">
               We always ensure that our customers will get the best experience
               from our tour travels. <br />
@@ -249,10 +304,10 @@
             </p>
           </div>
           <div class="icons">
-            <i class="fa-brands fa-twitter fa-2x"></i>
-            <i class="fa-brands fa-facebook fa-2x"></i>
-            <i class="fa-brands fa-square-instagram fa-2x"></i>
-            <i class="fa-brands fa-github fa-2x"></i>
+            <i style="margin-right: 10px;" class="fa-brands fa-twitter fa-2x"></i>
+            <i style="margin-right: 10px;" class="fa-brands fa-facebook fa-2x"></i>
+            <i style="margin-right: 10px;" class="fa-brands fa-square-instagram fa-2x"></i>
+            <i style="margin-right: 10px;" class="fa-brands fa-github fa-2x"></i>
           </div>
           <div class="hr-line">
             <div><hr /></div>
