--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 <input type="text" placeholder="Select Type" name="" id="" />
                 <!-- <i class="fa-light fa-angle-down"></i> -->
               </div>
-              <div class="banner-btn">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <button>Find Now</button>
+              <div>
+                
+                <button class="banner-btn" ><i class="fa-solid fa-magnifying-glass"></i>Find Now</button>
               </div>
             </div>
           </div>
@@ -295,7 +295,7 @@
         <div class="footer">
           <div class="footer-details">
             <img class="footer-img" src="Images/Group 40071 (2).png" alt="" />
-            <h1>AK <span class="travel">Travel</span></h1>
+            <h1 class="nav-heading">AK <span class="travel">Travel</span></h1>
           </div>
           <div>
             <p class="footer-para">
